updated java compiler to 21