@@ -57,7 +57,7 @@ public class ReleasedTabFragment extends Fragment {
     final AtomicInteger maxReleasesList = new AtomicInteger();
 
     @SuppressLint("ClickableViewAccessibility")
-    @RequiresApi(api = Build.VERSION_CODES.P)
+    @RequiresApi(api = Build.VERSION_CODES.VANILLA_ICE_CREAM)
     @Nullable
     @Override
     public View onCreateView(@NonNull LayoutInflater inflater, @Nullable ViewGroup container, @Nullable Bundle savedInstanceState) {
@@ -155,7 +155,7 @@ public class ReleasedTabFragment extends Fragment {
         return releasedView;
     }
 
-    @RequiresApi(api = Build.VERSION_CODES.P)
+    @RequiresApi(api = Build.VERSION_CODES.VANILLA_ICE_CREAM)
     public void updateReleasedMedia(boolean shouldSetAdapter, boolean shouldScrollToTop) {
         if (shouldScrollToTop) {
             mediaReleasesList.scrollToPosition(0);
@@ -273,7 +273,7 @@ public class ReleasedTabFragment extends Fragment {
                 if (mediaList != null && !mediaList.isEmpty()) {
                     Collections.sort(mediaList, (a1, a2) -> Long.compare(a2.releaseDateMillis, a1.releaseDateMillis));
 
-                    MediaNotification media = mediaList.get(0);
+                    MediaNotification media = mediaList.getFirst();
                     LocalDateTime localDateTime = LocalDateTime.ofInstant(Instant.ofEpochMilli(media.releaseDateMillis), ZoneId.systemDefault());
 
                     groupedReleasedMedia.add(new MediaReleaseGroup(entry.getKey(), localDateTime, mediaList));
